--- a/src/front-end/stories.html
+++ b/src/front-end/stories.html
@@ -58,8 +58,7 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg header-nav p-0">
 					<div class="navbar-header">
-						<a id="mobile_btn" role="button"
-  tabIndex="0">
+						<a id="mobile_btn" role="button" tabIndex="0">
 							<span class="bar-icon">
 								<span></span>
 								<span></span>
@@ -85,21 +84,20 @@
 								<img src="assets/img/FUTURE CONNECT LOGO - LONG - WHITE.svg" alt="Logo"
 									class="img-fluid">
 							</a>
-							<a id="menu_close" class="menu-close" role="button"
-  tabIndex="0"> <i class="fas fa-times"></i></a>
+							<a id="menu_close" class="menu-close" role="button" tabIndex="0"> <i
+									class="fas fa-times"></i></a>
 						</div>
 						<ul class="main-nav navbar-nav">
 							<li><a href="index.html" class="nav-link active">Home</a></li>
 
 							<li class="has-submenu">
-								<a role="button"
-  tabIndex="0">Talents <i class="fas fa-chevron-down"></i></a>
+								<a role="button" tabIndex="0">Talents <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="talents.html">All Talents</a></li>
 									<li><a href="register-talent.html">Register as Talent</a></li>
 									<li class="has-submenu">
-										<a role="button"
-  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button" tabIndex="0">Talent Categories <i
+												class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="talents.html?category=music">Music & Performance</a></li>
 											<li><a href="talents.html?category=tech">Tech & Coding</a></li>
@@ -117,18 +115,17 @@
 							</li>
 
 							<li>
-	<a href="announcements.html">Announcements</a>
-</li>
+								<a href="announcements.html">Announcements</a>
+							</li>
 
 							<li class="has-submenu">
-								<a role="button"
-  tabIndex="0">Stories <i class="fas fa-chevron-down"></i></a>
+								<a role="button" tabIndex="0">Stories <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="stories.html">All Stories</a></li>
 									<li><a href="upload-story.html">Upload Story</a></li>
 									<li class="has-submenu">
-										<a role="button"
-  tabIndex="0">Talent Categories <i class="fas fa-chevron-right"></i></a>
+										<a role="button" tabIndex="0">Talent Categories <i
+												class="fas fa-chevron-right"></i></a>
 										<ul class="submenu">
 											<li><a href="stories.html?category=music">Music & Performance</a></li>
 											<li><a href="stories.html?category=tech">Tech & Coding</a></li>
@@ -154,23 +151,20 @@
 					<div class="d-flex align-items-center">
 
 						<div class="nav-item dropdown flag-nav nav-item-box nav-item-box-home me-3">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
-  tabIndex="0"
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" tabIndex="0"
 								role="button">
 								<i class="ti ti-sun-high"></i>
 								<i class="ti ti-moon"></i>
 							</a>
 							<ul class="dropdown-menu p-2">
 								<li class="mb-1">
-									<a role="button"
-  tabIndex="0" class="dropdown-item active theme-toggle rounded-2"
+									<a role="button" tabIndex="0" class="dropdown-item active theme-toggle rounded-2"
 										id="light-mode-toggle">
 										<i class="ti ti-sun-high me-2"></i>Light Mode
 									</a>
 								</li>
 								<li>
-									<a role="button"
-  tabIndex="0" class="dropdown-item theme-toggle rounded-2"
+									<a role="button" tabIndex="0" class="dropdown-item theme-toggle rounded-2"
 										id="dark-mode-toggle">
 										<i class="ti ti-moon me-2"></i>Dark Mode
 									</a>
@@ -234,8 +228,7 @@
 								<li>
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<i class="ti ti-list page input"></i> Categories
 											</a>
 										</div>
@@ -280,8 +273,7 @@
 								<li>
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<i class="ti ti-map-pin-pin"></i>Locations
 											</a>
 										</div>
@@ -336,8 +328,7 @@
 								<li>
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<i class="ti ti-stars"></i>Reviews
 											</a>
 										</div>
@@ -415,8 +406,7 @@
 												</li>
 											</ul>
 											<div class="filter-btn">
-												<a role="button"
-  tabIndex="0">Reset</a>
+												<a role="button" tabIndex="0">Reset</a>
 												<button class="btn btn-primary">Apply</button>
 											</div>
 										</div>
@@ -428,8 +418,7 @@
 								<li>
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<i class="ti ti-moneybag"></i>Budget
 											</a>
 										</div>
@@ -462,8 +451,7 @@
 												</li>
 											</ul>
 											<div class="filter-btn">
-												<a role="button"
-  tabIndex="0">Reset</a>
+												<a role="button" tabIndex="0">Reset</a>
 												<button class="btn btn-primary">Apply</button>
 											</div>
 										</div>
@@ -475,8 +463,7 @@
 								<li class="more-content">
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<img src="assets/img/icons/user-icon.svg" alt="icon" class="me-2">Seller
 												Details
 											</a>
@@ -501,8 +488,7 @@
 												</li>
 											</ul>
 											<div class="filter-btn">
-												<a role="button"
-  tabIndex="0">Reset</a>
+												<a role="button" tabIndex="0">Reset</a>
 												<button class="btn btn-primary">Apply</button>
 											</div>
 										</div>
@@ -514,8 +500,7 @@
 								<li class="more-content">
 									<div class="collapse-card">
 										<div class="filter-header">
-											<a role="button"
-  tabIndex="0">
+											<a role="button" tabIndex="0">
 												<img src="assets/img/icons/time-icon.svg" alt="icon"
 													class="me-2">Delivery Time
 											</a>
@@ -548,8 +533,7 @@
 												</li>
 											</ul>
 											<div class="filter-btn">
-												<a role="button"
-  tabIndex="0">Reset</a>
+												<a role="button" tabIndex="0">Reset</a>
 												<button class="btn btn-primary">Apply</button>
 											</div>
 										</div>
@@ -558,8 +542,7 @@
 								<!-- /Delivery Time -->
 
 								<li class="view-all">
-									<a role="button"
-  tabIndex="0" class="show-more"><span><img
+									<a role="button" tabIndex="0" class="show-more"><span><img
 												src="assets/img/icons/add-icon.svg" alt="img"></span><span>Show
 											More</span></a>
 								</li>
@@ -570,8 +553,7 @@
 							<div class="filters-wrap sort-categories">
 								<div class="collapse-card float-lg-end">
 									<div class="filter-header">
-										<a role="button"
-  tabIndex="0" class="sorts-list">
+										<a role="button" tabIndex="0" class="sorts-list">
 											<i class="ti ti-sort-ascending"></i>Sorts by: <span>Recommended</span>
 										</a>
 									</div>
@@ -634,19 +616,15 @@
 														</div>
 													</div>
 													<div class="card-overlay-badge">
-														<a role="button"
-  tabIndex="0"><span class="badge bg-warning"><i
+														<a role="button" tabIndex="0"><span class="badge bg-warning"><i
 																	class="feather-star"></i>Featured</span></a>
-														<a role="button"
-  tabIndex="0"><span class="badge bg-success"><i
+														<a role="button" tabIndex="0"><span class="badge bg-success"><i
 																	class="fa-solid fa-bolt"></i>Rising
 																Star</span></a>
 													</div>
 													<div class="fav-selection">
-														<a role="button"
-  tabIndex="0"><i class="feather-video"></i></a>
-														<a role="button"
-  tabIndex="0" class="fav-icon"><i
+														<a role="button" tabIndex="0"><i class="feather-video"></i></a>
+														<a role="button" tabIndex="0" class="fav-icon"><i
 																class="feather-heart"></i></a>
 													</div>
 												</div>
@@ -670,13 +648,13 @@
 													</div>
 													<div class="gigs-card-footer">
 														<div class="d-flex align-items-center gigs-left-text">
-															<a role="button"
-  tabIndex="0" class="avatar avatar-sm flex-shrink-0"><img
+															<a role="button" tabIndex="0"
+																class="avatar avatar-sm flex-shrink-0"><img
 																	src="assets/img/user/profile.jpg"
 																	class="img-fluid rounded-pill" alt="img"></a>
 															<div class="ms-2">
-																<h6 class="mb-0"><a role="button"
-  tabIndex="0">Miriam K.</a></h6>
+																<h6 class="mb-0"><a role="button" tabIndex="0">Miriam
+																		K.</a></h6>
 																<p class="mb-0">Kigali, Rwanda</p>
 															</div>
 														</div>
@@ -708,18 +686,14 @@
 														</div>
 													</div>
 													<div class="card-overlay-badge">
-														<a role="button"
-  tabIndex="0"><span class="badge bg-warning"><i
+														<a role="button" tabIndex="0"><span class="badge bg-warning"><i
 																	class="feather-star"></i>Featured</span></a>
-														<a role="button"
-  tabIndex="0"><span class="badge bg-info"><i
+														<a role="button" tabIndex="0"><span class="badge bg-info"><i
 																	class="fa-solid fa-lightbulb"></i>Creative</span></a>
 													</div>
 													<div class="fav-selection">
-														<a role="button"
-  tabIndex="0"><i class="feather-video"></i></a>
-														<a role="button"
-  tabIndex="0" class="fav-icon"><i
+														<a role="button" tabIndex="0"><i class="feather-video"></i></a>
+														<a role="button" tabIndex="0" class="fav-icon"><i
 																class="feather-heart"></i></a>
 													</div>
 												</div>
@@ -738,13 +712,12 @@
 													</div>
 													<div class="gigs-card-footer">
 														<div class="d-flex align-items-center gigs-left-text">
-															<a role="button"
-  tabIndex="0" class="avatar avatar-sm"><img
+															<a role="button" tabIndex="0" class="avatar avatar-sm"><img
 																	src="assets/img/user/profile.jpg"
 																	class="img-fluid rounded-pill" alt="img"></a>
 															<div class="ms-2">
-																<h6 class="mb-0"><a role="button"
-  tabIndex="0">Daniel Omondi</a></h6>
+																<h6 class="mb-0"><a role="button" tabIndex="0">Daniel
+																		Omondi</a></h6>
 																<p class="mb-0">Nairobi, Kenya</p>
 															</div>
 														</div>
@@ -770,18 +743,14 @@
 														</div>
 													</div>
 													<div class="card-overlay-badge">
-														<a role="button"
-  tabIndex="0"><span class="badge bg-warning"><i
+														<a role="button" tabIndex="0"><span class="badge bg-warning"><i
 																	class="feather-star"></i>Featured</span></a>
-														<a role="button"
-  tabIndex="0"><span class="badge bg-danger"><i
+														<a role="button" tabIndex="0"><span class="badge bg-danger"><i
 																	class="fa-solid fa-fire"></i>Trending</span></a>
 													</div>
 													<div class="fav-selection">
-														<a role="button"
-  tabIndex="0"><i class="feather-music"></i></a>
-														<a role="button"
-  tabIndex="0" class="fav-icon"><i
+														<a role="button" tabIndex="0"><i class="feather-music"></i></a>
+														<a role="button" tabIndex="0" class="fav-icon"><i
 																class="feather-heart"></i></a>
 													</div>
 												</div>
@@ -800,13 +769,12 @@
 													</div>
 													<div class="gigs-card-footer">
 														<div class="d-flex align-items-center gigs-left-text">
-															<a role="button"
-  tabIndex="0" class="avatar avatar-sm"><img
+															<a role="button" tabIndex="0" class="avatar avatar-sm"><img
 																	src="assets/img/user/profile.jpg"
 																	class="img-fluid rounded-pill" alt="img"></a>
 															<div class="ms-2">
-																<h6 class="mb-0"><a role="button"
-  tabIndex="0">Zara B.</a></h6>
+																<h6 class="mb-0"><a role="button" tabIndex="0">Zara
+																		B.</a></h6>
 																<p class="mb-0">Accra, Ghana</p>
 															</div>
 														</div>
@@ -914,16 +882,15 @@
 						</a>
 						<div class="social-links">
 							<ul>
-								<li class="me-2"><a role="button"
-  tabIndex="0"><i class="fa-brands fa-facebook"></i></a></li>
-								<li class="me-2"><a role="button"
-  tabIndex="0"><i class="fa-brands fa-x-twitter"></i></a></li>
-								<li class="me-2"><a role="button"
-  tabIndex="0"><i class="fa-brands fa-instagram"></i></a></li>
-								<li class="me-2"><a role="button"
-  tabIndex="0"><i class="fa-brands fa-linkedin"></i></a></li>
-								<li><a role="button"
-  tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
+								<li class="me-2"><a role="button" tabIndex="0"><i class="fa-brands fa-facebook"></i></a>
+								</li>
+								<li class="me-2"><a role="button" tabIndex="0"><i
+											class="fa-brands fa-x-twitter"></i></a></li>
+								<li class="me-2"><a role="button" tabIndex="0"><i
+											class="fa-brands fa-instagram"></i></a></li>
+								<li class="me-2"><a role="button" tabIndex="0"><i class="fa-brands fa-linkedin"></i></a>
+								</li>
+								<li><a role="button" tabIndex="0"><i class="fa-brands fa-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
